Fix: Black shard on dark theme is not very visible

--- a/src/sections/Shard/index.css
+++ b/src/sections/Shard/index.css
@@ -45,6 +45,11 @@
 
 .Black {
   color: black;
+  text-shadow: 0px 0px 2px white;
+}
+
+body.light .Black {
+  text-shadow: unset;
 }
 
 .AbsoluteTime {
